--- a/index.html
+++ b/index.html
@@ -251,11 +251,40 @@
 
             </p>
             <p>
-                <input type="button" value="Check Premium">
+                <input type="button" id="premium" value="Check Premium">
             </p>
-            <p id="result">
+            <p id="premiumresult">
+            </p>
+            <script>
+                function getpremium(){
+                    var bE = document.querySelector('#premium');
+                    bE.addEventListener('click',getpremium,false);
+                    var base = 10;
+                    var coverage = document.querySelector('input[name="coverage"]:checked').value;
+                    var ageindex = document.querySelector('#agegroup').selectedIndex;
 
-            </p>
+                    //get the age factor using switch
+                    var agefactor = 0
+                    switch(ageindex){
+                        case 0: 
+                            agefactor = 0.08;
+                            break;
+                        case 1:
+                            agefactor = 0.09;
+                            break;
+                        case 2:
+                            agefactor = 0.11;
+                            break;
+                        case 3:
+                            agefactor = 0.17;
+                            break;
+                    }
+
+                    //calculation
+                    var premium = base + parseFloat(coverage)/1000*agefactor;
+                    //display
+                }
+            </script>
 
         </div>
 
@@ -269,7 +298,15 @@
             <p>
                 <input type="button" value="Click for Square">
             </p>
+            <script>
+                for (let i = 0; i < 6; i++) {
+                    var square = i * i;
+                    outlist += "<li>" + i + "^2 = " +square +"</li";
+                }
+                outlist +="</ul>";
 
+                document.getElementById('squarelist').innerHTML = outlist;
+            </script>
         </div>
 
 
@@ -307,7 +344,12 @@
             <p>Target: Generate a simple substract and add problems using JavaScript and then check the answers</p>
             <a href="quiz1.html">Do your practice in quiz1.html</a>
         </div>
-
+            <script>
+                for (let i = 0; i<4; i++){
+                    var num = Math.floor(Math.random()*6)+1;
+                   // alert(num)
+                }
+            </script>
         <div class="practice">
             <h1>Change Attribute -- Rolling a dice </h1>
             <p> <input type="button" id="roll" value="roll" /> </p>
@@ -332,6 +374,12 @@
                     <td id="r6"></td>
                 </tr>
             </table>
+
+            <script>
+                //practice array 
+                const myarray = [1,2,3,4,5,6,7];
+                
+            </script>
 
         </div>
 
